<resources>
    <string name="app_name">LoanCalulator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Loan_Amount">Loam Amount :</string>
    <string name="zeroDecimal">00.00</string>
    <string name="zero">0.00</string>
    <string name="Interest">Interest Rate:</string>
    <string name="Ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="LoanYears">Loan in years :</string>
    <string name="Total">Total:</string>
</resources>
